feat and refactor: put TestQuestions to distintc file